--- a/web/Views/Watchlist/Details.cshtml
+++ b/web/Views/Watchlist/Details.cshtml
@@ -1,7 +1,7 @@
 @model web.Controllers.WatchlistController.WatchlistDetailsViewModel
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Watchlist";
 }
 
 <input type="hidden" id="saved-theme" value="@ViewBag.mode" />
