--- a/web/Views/Watchlist/Index.cshtml
+++ b/web/Views/Watchlist/Index.cshtml
@@ -1,7 +1,7 @@
 @model IEnumerable<web.Models.Watchlist>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Public Watchlists";
 }
 
 <input type="hidden" id="saved-theme" value="@ViewBag.mode" />
