Table sorting, CSS fixes and crash bugfix

--- a/web/Views/Home/Index.cshtml
+++ b/web/Views/Home/Index.cshtml
@@ -10,14 +10,14 @@
     <table data-show-multi-sort class="table striped-table table-hover align-middle" id="mainpage-table">
         <thead>
             <tr>
-                <th>Rank</th>
-                <th class="mainpage-table-name">Name</th>
-                <th>Price (@ViewBag.CurSymbol)</th>
+                <th class="order">Rank</th>
+                <th class="order mainpage-table-name">Name</th>
+                <th class="order">Price (@ViewBag.CurSymbol)</th>
                 <th>Supply</th>
                 <th>Max Supply</th>
-                <th>Market Cap (@ViewBag.CurSymbol)</th>
-                <th>24Hr Volume (@ViewBag.CurSymbol)</th>
-                <th class="mainpage-table-change">Change 24Hr (%)</th>
+                <th class="order">Market Cap (@ViewBag.CurSymbol)</th>
+                <th class="order">24Hr Volume (@ViewBag.CurSymbol)</th>
+                <th class="order mainpage-table-change">Change 24Hr (%)</th>
             </tr>
         </thead>
         <tbody>
@@ -252,4 +252,67 @@
     setInterval(() => {
         location.reload();
     }, 60000);
+
+    function table_sort() {
+        const styleSheet = document.createElement('style');
+        styleSheet.innerHTML = `
+        .order-inactive span {
+            visibility:hidden;
+        }
+        .order-inactive:hover span {
+            visibility:visible;
+        }
+        .order-active span {
+            visibility: visible;
+        }
+    `;
+        document.head.appendChild(styleSheet);
+        console.log("test");
+        document.querySelectorAll('th.order').forEach(th_elem => {
+            let asc = true;
+            const span_elem = document.createElement('span');
+            span_elem.style = "font-size:0.8rem; margin-left:0.5rem";
+            span_elem.innerHTML = "▼";
+            th_elem.appendChild(span_elem);
+            th_elem.classList.add('order-inactive');
+
+            const index = Array.from(th_elem.parentNode.children).indexOf(th_elem);
+            th_elem.addEventListener('click', (e) => {
+                document.querySelectorAll('th.order').forEach(elem => {
+                    elem.classList.remove('order-active')
+                    elem.classList.add('order-inactive')
+                });
+                th_elem.classList.remove('order-inactive');
+                th_elem.classList.add('order-active');
+
+                if (!asc) {
+                    th_elem.querySelector('span').innerHTML = '▲';
+                } else {
+                    th_elem.querySelector('span').innerHTML = '▼';
+                }
+                const arr = Array.from(th_elem.closest("table").querySelectorAll('tbody tr'));
+                arr.sort((a, b) => {
+                    let a_val = a.children[index].innerText.replace(/[\$,]/g, '');
+                    let b_val = b.children[index].innerText.replace(/[\$,]/g, '');
+                    const a_num = parseFloat(a_val);
+                    const b_num = parseFloat(b_val);
+
+                    // Check if both values are valid numbers
+                    if (!isNaN(a_num) && !isNaN(b_num)) {
+                        return asc ? a_num - b_num : b_num - a_num;
+                    }
+                    return (asc) ? a_val.localeCompare(b_val) : b_val.localeCompare(a_val);
+                })
+                arr.forEach(elem => {
+                    th_elem.closest("table").querySelector("tbody").appendChild(elem)
+                });
+                asc = !asc;
+            })
+        })
+    }
+
+    table_sort();
+
+
+
 </script>
